webextensions/sidebar/styles/base.css
@charset "UTF-8";
/*
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
*/

@import url("/resources/ui-base.css");

:root {
  /* default size, they will be overridden. */
  --favicon-size: 16px;
  --tab-size: unset;
  --tab-indent: 0px;
  --tab-margin-block-start: 0px;
  --tab-margin-block-end: 0px;
  --tab-margin-inline-start: 0px;
  --tab-margin-inline-end: 0px;
  --faviconized-tab-size: 28px;
  --svg-small-icon-size: 16px;
  --new-tab-button-anchor-size: 1.5em;
  --tabbar-top-area-size: 0px;
  --tabbar-bottom-area-size: 0px;
  --after-tabs-area-size: 0px;
  --pinned-tabs-area-size: 0px;
  --subpanel-area-size: 0px;
  --subpanel-content-size: auto;

  --color-animation: 0.25s ease-out;
  --indent-animation: var(--indent-duration) ease-out;
  --collapse-animation: var(--collapse-duration) ease-out;
  --tab-basic-animation: background    var(--color-animation),
                         color         var(--color-animation),
                         inset-inline-start var(--collapse-animation),
                         inset-inline-end   var(--collapse-animation),
                         margin-block-start var(--collapse-animation),
                         margin-block-end   var(--collapse-animation),
                         max-height    var(--collapse-animation),
                         max-width     var(--collapse-animation),
                         min-height    var(--collapse-animation),
                         min-width     var(--collapse-animation),
                         opacity       var(--collapse-animation),
                         /* for extra margin on overlay-scrollbar mode */
                         padding-inline-start var(--collapse-animation),
                         padding-inline-end   var(--collapse-animation);
  --tab-animation: var(--tab-basic-animation),
                   background    var(--color-animation),
                   top           var(--collapse-animation);
  --tab-indent-animation: margin-inline-start var(--indent-animation),
                          margin-inline-end   var(--indent-animation);

  --button-opacity: 0.75;
  --button-hover-opacity: 1;
  --button-active-opacity: 1;

  --tab-highlighted-highlight: white;
  --tab-highlighted-glow: Highlight;
  --tab-highlighted-base: transparent;

  /* Default color for "No Decoration" */
  --tab-text-regular: ButtonText;

  --tab-surface: var(--tab-surface-regular);
  --tab-text: var(--tab-text-regular);
  --tab-text-shadow: none;

  --multiselected-color: transparent;
  --multiselected-color-opacity: 0.35;

  /* z-index of elements: we should define them here to keep their strict priorities */
  --invisible-z-index:       -100;
  --dummy-element-z-index:   1; /* dummy tab */
  --background-z-index:      10; /* background screen */
  --accessible-ui-z-index:   100; /* tabbar itself, and others */
  --over-tabs-z-index:       200; /* buttons after tabs, pinned tabs (required to make pinned tabs clickable) */
  --over-buttons-z-index:    300; /* buttons on buttons after tabs */
  --notification-ui-z-index: 9000;
  --tooltip-ui-z-index:      10000;
  --blocking-ui-z-index:     20000; /* frontmost of others */

  --tab-background-z-index:            10;
  --tab-extra-contents-behind-z-index: 20;
  --tab-indent-z-index:                90;
  --tab-base-z-index:                  100;
  --tab-extra-contents-beside-z-index: 150;
  --tab-favicon-z-index:               200;
  --tab-burster-z-index:               4000;
  --tab-highlighter-z-index:           5000;
  --tab-extra-contents-front-z-index:  6000;
  --tab-ui-z-index:                    9000;
  --tab-drop-marker-z-index:           10000;

  --visual-gap-offset: 0px;
  --visual-gap-animation: top var(--collapse-animation);
  --visual-gap-hover-animation: top var(--collapse-animation) var(--visual-gap-hover-animation-delay);
}
/* Some users may use physical properties to customize tab margins, so we should map them to logical propertis for better compatibility.
   https://github.com/piroor/treestyletab/wiki/Code-snippets-for-custom-style-rules#change-tab-margin */
:root:not(.rtl),
:root:not(.rtl) tab-item {
  --tab-margin-block-start: var(--tab-margin-top, 0px);
  --tab-margin-block-end: var(--tab-margin-bottom, 0px);
  --tab-margin-inline-start: var(--tab-margin-left, 0px);
  --tab-margin-inline-end: var(--tab-margin-right, 0px);
}
:root.rtl,
:root.rtl tab-item {
  --tab-margin-block-start: var(--tab-margin-top, 0px);
  --tab-margin-block-end: var(--tab-margin-bottom, 0px);
  --tab-margin-inline-start: var(--tab-margin-right, 0px);
  --tab-margin-inline-end: var(--tab-margin-left, 0px);
}


body {
  margin-block: 0;
  margin-inline: 0;
  padding-block: 0;
  padding-inline: 0;
}
/* ... */

